<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_250sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_person"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/person_image"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_person_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dump_person"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintTop_toBottomOf="@id/iv_person"
                app:layout_constraintStart_toStartOf="@id/iv_person"
                app:layout_constraintEnd_toEndOf="@id/iv_person"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dump_title"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/lato_semibold"
                android:textColor="@color/gray"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_person_nama"
                app:layout_constraintStart_toStartOf="@id/tv_person_nama"
                app:layout_constraintEnd_toEndOf="@id/tv_person_nama"/>

            <ImageView
                android:id="@+id/iv_rate"
                android:layout_width="@dimen/_142sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/rate"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="@id/tv_title"/>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/tv_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/iv_rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/testimoni_dump"/>

            <View
                android:id="@+id/upperLine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"
                android:background="@color/navy"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>